Fix: Remove custom title alignment, switch to simple left-aignment

--- a/style.css
+++ b/style.css
@@ -189,8 +189,8 @@ header {
     text-wrap: balance;
     line-height: 10pt;
     margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 3pt;
+    margin-bottom: 4pt;
+    padding-left: 4pt;
     padding-right: 3pt;
 }
 
